# Budget-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  spese.db
spese_app/: __init__.py  app.py  db.py  llm.py
